--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -3,9 +3,17 @@ on:
     push:
 jobs:
     build:
-        runs-on:    ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
-            - name: Run a multi-line script
+            - name: Clonacion de Codigo
+              uses: actions/checkout@v4
+
+            - name: Setup Java JDK
+              uses: actions/setup-java@v4.2.1
+              with:
+                java-version: '8'
+                distribution: 'temurin'
+
+            - name: Compilacion
               run: |
-                    echo "hola mundo"
+                    mvn package
