--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -11,9 +11,20 @@ jobs:
             - name: Setup Java JDK
               uses: actions/setup-java@v4.2.1
               with:
-                java-version: '8'
+                java-version: '17'
                 distribution: 'temurin'
 
             - name: Compilacion
               run: |
-                    mvn package
+                    #mvn package
+                    echo 'package'
+
+            - name: Analisis SonarCloud
+              run: |
+                mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
+                -Dsonar.token=${{ secrets.GITHUB_TOKEN }} \
+                -Dsonar.host.url=https://sonarcloud.io \
+                -Dsonar.organization=cristian-aliaga \
+                -Dsonar.projectKey=cristian-aliaga_ms-aumento-voto
+            
+            
