--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -19,7 +19,7 @@ jobs:
                     #mvn package
                     echo 'package'
 
-            - name: Analisis SonarCloud
+            - name: Analisis SonarCloud 2
               run: |
                 mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
                 -Dsonar.token=${{ secrets.GITHUB_TOKEN }} \
