--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -26,3 +26,9 @@ jobs:
                 -Dsonar.host.url=https://sonarcloud.io \
                 -Dsonar.organization=cristian-aliaga \
                 -Dsonar.projectKey=cristian-aliaga_ms-aumento-voto
+            
+            - name: Docker Login
+              uses: docker/login-action@v3.1.0
+              with: 
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_PASSWORD }}
