--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -32,3 +32,14 @@ jobs:
               with: 
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_PASSWORD }}
+            
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Docker Build
+              run: |
+                docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/repo-image:latest .
+
+            - name: Docker Push
+              run: |
+                docker push ${{ secrets.DOCKERHUB_USERNAME }}/repo-image:latest
