--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -3,7 +3,7 @@ on:
     push:
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         steps:
             - name: Clonacion de Codigo
               uses: actions/checkout@v4
@@ -18,7 +18,7 @@ jobs:
               run: |
                     #mvn package
                     echo 'package'
-                    
+
             - name: Test Unitarios
               run: |
                 mvn package test
