--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,5 +1,5 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: actions.summerwind.dev/v1alpha1
+kind: RunnerDeployment
 metadata:
   name: ms-aumento-voto
 spec:
