--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,5 +1,5 @@
-apiVersion: actions.summerwind.dev/v1alpha1
-kind: RunnerDeployment
+apiVersion: v1
+kind: Deployment
 metadata:
   name: ms-aumento-voto
 spec:
