--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -55,7 +55,7 @@ jobs:
             steps:
                 - name: Clonacion de Codigo
                   uses: actions/checkout@v4
-                  
+
                 - name: Despliegue Test Runner Kubernetes
                   run: |
-                    kubectl apply -f deploy.yaml
+                    kubectl apply -f deploy.yaml --validate=false
