--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -22,14 +22,14 @@ jobs:
             - name: Test Unitarios
               run: |
                 mvn package test
-
-            - name: Analisis SonarCloud
-              run: |
-                mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
-                -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
-                -Dsonar.host.url=https://sonarcloud.io \
-                -Dsonar.organization=cristian-aliaga \
-                -Dsonar.projectKey=cristian-aliaga_ms-aumento-voto
+            
+            #- name: Analisis SonarCloud
+            #  run: |
+            #    mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
+            #    -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
+            #    -Dsonar.host.url=https://sonarcloud.io \
+            #    -Dsonar.organization=cristian-aliaga \
+            #    -Dsonar.projectKey=cristian-aliaga_ms-aumento-voto
             
             - name: Docker Login
               uses: docker/login-action@v3.1.0
