--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -23,13 +23,13 @@ jobs:
               run: |
                 mvn package test
             
-            #- name: Analisis SonarCloud
-            #  run: |
-            #    mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
-            #    -Dsonar.token=${{ secrets.SONAR_TOKEN }} \
-            #    -Dsonar.host.url=https://sonarcloud.io \
-            #    -Dsonar.organization=cristian-aliaga \
-            #    -Dsonar.projectKey=cristian-aliaga_ms-aumento-voto
+            - name: Analisis SonarCloud
+              run: |
+                mvn clean verify org.sonarsource.scanner.maven:sonar-maven-plugin:3.11.0.3922:sonar \
+                -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+                -Dsonar.host.url=https://sonarcloud.io \
+                -Dsonar.organization=cristian-aliaga-organization \
+                -Dsonar.projectKey=cristian-aliaga_ms-aumento-voto
             
             - name: Docker Login
               uses: docker/login-action@v3.1.0
