--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -1,6 +1,12 @@
 name: CI
 on: 
-    push:
+    push: 
+        branches: 
+            - main
+    pull_request:
+        branches: 
+            - main
+    
 jobs:
     build:
         runs-on: ubuntu-latest
