--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -1,18 +1,19 @@
-name: CI
-on: 
-    push: 
-        branches: 
-            - main
-    pull_request:
-        branches: 
-            - main
+name: CI/CD Pipeline
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
     
 jobs:
     build:
         runs-on: ubuntu-latest
         steps:
             - name: Clonacion de Codigo
-              uses: actions/checkout@v4
+              uses: actions/checkout@v3
 
             - name: Setup Java JDK
               uses: actions/setup-java@v4.2.1
@@ -60,7 +61,7 @@ jobs:
                 
             steps:
                 - name: Clonacion de Codigo
-                  uses: actions/checkout@v4
+                  uses: actions/checkout@v3
 
                 - name: Despliegue Test Runner Kubernetes
                   run: |
