--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -62,7 +62,10 @@ jobs:
             steps:
                 - name: Clonacion de Codigo
                   uses: actions/checkout@v3
-
+                - name: Set up kubectl
+                  uses: azure/setup-kubectl@v3
+                  with:
+                    version: 'latest'
                 - name: Despliegue Test Runner Kubernetes
                   run: |
                     kubectl apply -f deploy.yaml --validate=false
