--- a/.github/workflows/pipeline-ci.yml
+++ b/.github/workflows/pipeline-ci.yml
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
     branches:
-      - main
+      - main # Ejecuta el flujo de trabajo en cada pull request a la rama main
     
 jobs:
     build:
@@ -54,7 +54,7 @@ jobs:
             - name: Docker Push
               run: |
                 docker push ${{ secrets.DOCKERHUB_USERNAME }}/repo-image:latest
-    
+        
     deploy:
             needs: build
             runs-on: self-hosted
@@ -62,6 +62,7 @@ jobs:
             steps:
                 - name: Clonacion de Codigo
                   uses: actions/checkout@v3
+
                 - name: Despliegue Test Runner Kubernetes
                   run: |
                     kubectl apply -f deploy.yaml --validate=false --insecure-skip-tls-verify=true
